# teamWorkOne

./: .gitignore  CMakeLists.txt  Makefile  README.md  Temperature.c  Temperature.h  Unidade-de-medida  arquivo.txt  conversor.c  conversor.h  documantação da estrutura das pastas.txt  main.c  pequeno_guia_de_engajamento.txt  temas.txt  toolchain-linux.cmake  toolchain-windows.cmake
includes/: MODULO_OPERACAO_ARMAZENAMENTO.h  MODULO_OPERACAO_COMPRIMENTO.h  MODULO_OPERACAO_MASSA.h  MODULO_OPERACAO_MEDIDAS.h  MODULO_OPERACAO_POTENCIA.h  MODULO_OPERACAO_TEMP.h  armazenamento.h  conversor.h  conversor_de_potencia.h  conversor_unid_potencia.h  mass_conversion.h  moduloOperacaoSeis.h  temperature.h  tests.h  unidade_de_medida.h  utils.h
src/core/: a.out  main  main.c  moduloConversaoArmazenamento.c  moduloConversaoMassa.c  moduloOperacaoConversaoComprimento.c  moduloOperacaoConversaoVolume.c  moduloOperacaoMedidas.c  moduloOperacaoPotencia.c  moduloOperacaoTemp.c  moduloOperacaoUm.c  oldmain.c
src/modules/: armazenamento.c  conversor.c  conversor_de_potencia.c  mass_conversion.c  moduloOperacaoSeis.c  temperature.c  tests.c  unidade_de_medida.c
src/utils/: utils.c
teste/: CMakeLists.txt  moduloOperacaoTemp.c  temperature.h
